--- a/ukk/index.html
+++ b/ukk/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 <html lang="en" class="gr__for4diet-flostat_world"><head>
-<base href="/ukk/">
+<base href="/aca/ukk/">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     
     <meta name="ROBOTS" content="NOINDEX, NOFOLLOW">
